--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -376,6 +376,9 @@ caldav==0.6.1
 # homeassistant.components.cisco_mobility_express
 ciscomobilityexpress==0.3.3
 
+# homeassistant.components.clarifai
+clarifai==2.6.2
+
 # homeassistant.components.cppm_tracker
 clearpasspy==1.0.2
 
